--- a/MySelenium/pom.xml
+++ b/MySelenium/pom.xml
@@ -30,5 +30,13 @@
 			<version>7.3.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl -->
+<dependency>
+    <groupId>net.sourceforge.jexcelapi</groupId>
+    <artifactId>jxl</artifactId>
+    <version>2.6.12</version>
+</dependency>
+
+		
 	</dependencies>
 </project>
